<resources>
    <string name="app_name" translatable="false">ProftaakS2Maatwerk</string>
    <string name="shared_directory_name" translatable="false">Proftaak S2M photos</string>

    <string name="feedback_submit_button">Submit</string>
    <string name="feedback_emotion_label">Was your emotional state guessed correctly? If not, pick the correct one.</string>
    <string name="feedback_age_label">Was your age guessed correctly? If not, specify the correct age.</string>
    <string name="feedback_title">Feedback</string>
    <string name="share_button_title">Share</string>
    <string name="back_to_camera_button">Go to camera</string>
    <string name="crop_and_submit_button">Crop and submit</string>
    <string name="toggle_flash_button_description">Toggle Flash</string>
    <string name="switch_lens_button_description">Switch lens</string>
    <string name="take_picture_button">Take picture</string>
    <string name="toast_network_unavailable">Network unavailable</string>
    <string name="toast_camera_unavailable">The photo camera on this device is either unavailable or unsupported.</string>
    <string name="toast_error">An error occurred</string>
    <string name="toast_feedback_unavailable">Feedback not available at this time</string>
    <string name="share_image_title">Share image to&#8230;</string>
    <string name="main_open_gallery_button">Open gallery</string>
    <string name="main_take_picture_button">Open camera</string>
    <string name="last_picture_content_description">Last picture taken with this app</string>
    <string name="taken_send_feedback_button">Send feedback</string>
    <string name="taken_save_picture_button">Save to gallery</string>
    <string name="taken_picture">Picture you just took</string>
    <string name="toast_crop_error">Error while cropping image</string>
    <string name="result_image_age_suffix">years old</string>
    <string name="result_image_bottom_bar_text">Proftaak S2M project</string>
    <string name="toast_save_photo_to_gallery_error">Could not save the photo</string>
    <string name="toast_save_photo_to_gallery_success">Photo has been saved to gallery</string>
    <string name="Anger">Angry</string>
    <string name="Sad">Sad</string>
    <string name="Happy">Happy</string>
    <string name="Disgust">Disgusted</string>
    <string name="buttonStartOver">Start over</string>
</resources>
